[package]
name = "tonic-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # 用来运行 HelloWorld gRPC 服务器的可执行文件
name = "server"
path = "src/server.rs"

[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"

